Fixed display on small pages

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,14 +14,14 @@ body{
 h1{
     text-align: center;
     font-family: var(--heading-font-family);
-        
+    
 }
 
 p{
-    font-family: var(--default-font-family);
+    font-family: var(--default-font-family)
 }
 img{
-   
+    padding-left: 10px;
     width: 400px;
     
 }
@@ -58,9 +58,8 @@ footer{
     margin-left: 10px;
     margin-bottom: 10px;
 } 
-.agrofuture-description{
-    padding-right: 15px;
-}
+
+
 @media (max-width:960px) {
 .container {
     text-align: center;
